--- a/.config
+++ b/.config
@@ -114,7 +114,7 @@ BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
 BR2_DEFCONFIG="/hdd/ravion/buildroot-stable/buildroot-2017.02.5/configs/mx51evk_defconfig"
 BR2_DL_DIR="/hdd/brdl"
-BR2_HOST_DIR="/hdd/brhost/host"
+BR2_HOST_DIR="/workspace/brhost"
 
 #
 # Mirrors and Download locations
@@ -773,7 +773,7 @@ BR2_PACKAGE_KODI_EGL_GLES=y
 BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MPLAYER is not set
-BR2_PACKAGE_MPV=y
+# BR2_PACKAGE_MPV is not set
 # BR2_PACKAGE_MULTICAT is not set
 BR2_PACKAGE_MUSEPACK=y
 # BR2_PACKAGE_NCMPC is not set
@@ -854,7 +854,7 @@ BR2_PACKAGE_LSOF=y
 #
 # BR2_PACKAGE_NMON is not set
 BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
-BR2_PACKAGE_OPROFILE=y
+# BR2_PACKAGE_OPROFILE is not set
 
 #
 # pax-utils needs a toolchain w/ headers >= 3.5
@@ -1917,29 +1917,29 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSMN is not set
-BR2_PACKAGE_JSON_C=y
-BR2_PACKAGE_JSON_GLIB=y
-BR2_PACKAGE_JSONCPP=y
-BR2_PACKAGE_LIBFASTJSON=y
-BR2_PACKAGE_LIBJSON=y
+# BR2_PACKAGE_JSON_C is not set
+# BR2_PACKAGE_JSON_GLIB is not set
+# BR2_PACKAGE_JSONCPP is not set
+# BR2_PACKAGE_LIBFASTJSON is not set
+# BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBUCL is not set
 BR2_PACKAGE_LIBXML2=y
-BR2_PACKAGE_LIBXMLPP=y
-BR2_PACKAGE_LIBXMLRPC=y
+# BR2_PACKAGE_LIBXMLPP is not set
+# BR2_PACKAGE_LIBXMLRPC is not set
 # BR2_PACKAGE_LIBXSLT is not set
 # BR2_PACKAGE_LIBYAML is not set
-BR2_PACKAGE_MXML=y
+# BR2_PACKAGE_MXML is not set
 # BR2_PACKAGE_PUGIXML is not set
 # BR2_PACKAGE_RAPIDJSON is not set
-BR2_PACKAGE_RAPIDXML=y
+# BR2_PACKAGE_RAPIDXML is not set
 # BR2_PACKAGE_RAPTOR is not set
-BR2_PACKAGE_TINYXML=y
-BR2_PACKAGE_TINYXML2=y
+# BR2_PACKAGE_TINYXML is not set
+# BR2_PACKAGE_TINYXML2 is not set
 # BR2_PACKAGE_VALIJSON is not set
-BR2_PACKAGE_XERCES=y
+# BR2_PACKAGE_XERCES is not set
 # BR2_PACKAGE_YAJL is not set
-BR2_PACKAGE_YAML_CPP=y
+# BR2_PACKAGE_YAML_CPP is not set
 
 #
 # Logging
@@ -2007,7 +2007,7 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_FILEMQ is not set
 # BR2_PACKAGE_FLICKCURL is not set
 # BR2_PACKAGE_FREERADIUS_CLIENT is not set
-BR2_PACKAGE_GEOIP=y
+# BR2_PACKAGE_GEOIP is not set
 # BR2_PACKAGE_GLIB_NETWORKING is not set
 # BR2_PACKAGE_GSSDP is not set
 # BR2_PACKAGE_GUPNP is not set
@@ -2110,39 +2110,7 @@ BR2_PACKAGE_RTMPDUMP=y
 # BR2_PACKAGE_ATF is not set
 # BR2_PACKAGE_BCTOOLBOX is not set
 # BR2_PACKAGE_BDWGC is not set
-BR2_PACKAGE_BOOST=y
-BR2_PACKAGE_BOOST_LAYOUT_SYSTEM=y
-# BR2_PACKAGE_BOOST_LAYOUT_TAGGED is not set
-# BR2_PACKAGE_BOOST_LAYOUT_VERSIONED is not set
-BR2_PACKAGE_BOOST_LAYOUT="system"
-BR2_PACKAGE_BOOST_ATOMIC=y
-BR2_PACKAGE_BOOST_CHRONO=y
-BR2_PACKAGE_BOOST_CONTAINER=y
-BR2_PACKAGE_BOOST_CONTEXT=y
-BR2_PACKAGE_BOOST_COROUTINE=y
-BR2_PACKAGE_BOOST_COROUTINE2=y
-BR2_PACKAGE_BOOST_DATE_TIME=y
-BR2_PACKAGE_BOOST_EXCEPTION=y
-BR2_PACKAGE_BOOST_FILESYSTEM=y
-BR2_PACKAGE_BOOST_GRAPH=y
-BR2_PACKAGE_BOOST_GRAPH_PARALLEL=y
-BR2_PACKAGE_BOOST_IOSTREAMS=y
-BR2_PACKAGE_BOOST_LOCALE=y
-BR2_PACKAGE_BOOST_LOG=y
-BR2_PACKAGE_BOOST_MATH=y
-BR2_PACKAGE_BOOST_METAPARSE=y
-BR2_PACKAGE_BOOST_MPI=y
-BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
-BR2_PACKAGE_BOOST_RANDOM=y
-BR2_PACKAGE_BOOST_REGEX=y
-BR2_PACKAGE_BOOST_SERIALIZATION=y
-BR2_PACKAGE_BOOST_SIGNALS=y
-BR2_PACKAGE_BOOST_SYSTEM=y
-BR2_PACKAGE_BOOST_TEST=y
-BR2_PACKAGE_BOOST_THREAD=y
-BR2_PACKAGE_BOOST_TIMER=y
-BR2_PACKAGE_BOOST_TYPE_ERASURE=y
-BR2_PACKAGE_BOOST_WAVE=y
+# BR2_PACKAGE_BOOST is not set
 # BR2_PACKAGE_CLAPACK is not set
 BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CLASSPATH is not set
@@ -2232,8 +2200,8 @@ BR2_PACKAGE_LINUX_PAM=y
 # BR2_PACKAGE_P11_KIT is not set
 # BR2_PACKAGE_POCO is not set
 BR2_PACKAGE_PROTOBUF_ARCH_SUPPORTS=y
-BR2_PACKAGE_PROTOBUF=y
-BR2_PACKAGE_PROTOBUF_C=y
+# BR2_PACKAGE_PROTOBUF is not set
+# BR2_PACKAGE_PROTOBUF_C is not set
 # BR2_PACKAGE_QHULL is not set
 # BR2_PACKAGE_QLIBC is not set
 # BR2_PACKAGE_RIEMANN_C_CLIENT is not set
