--- a/.config
+++ b/.config
@@ -1404,7 +1404,7 @@ BR2_PACKAGE_HWLOC=y
 BR2_PACKAGE_I2C_TOOLS=y
 # BR2_PACKAGE_INPUT_EVENT_DAEMON is not set
 # BR2_PACKAGE_INPUT_TOOLS is not set
-BR2_PACKAGE_IOSTAT=y
+# BR2_PACKAGE_IOSTAT is not set
 # BR2_PACKAGE_IPMITOOL is not set
 # BR2_PACKAGE_IQVLINUX is not set
 # BR2_PACKAGE_IRDA_UTILS is not set
@@ -2460,10 +2460,7 @@ BR2_PACKAGE_OPENSSH=y
 #
 # openswan needs a uClibc or glibc toolchain w/ headers >= 3.0
 #
-BR2_PACKAGE_OPENVPN=y
-BR2_PACKAGE_OPENVPN_LZ4=y
-BR2_PACKAGE_OPENVPN_LZO=y
-BR2_PACKAGE_OPENVPN_SMALL=y
+# BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
 # BR2_PACKAGE_PHIDGETWEBSERVICE is not set
 # BR2_PACKAGE_PORTMAP is not set
