--- a/.config
+++ b/.config
@@ -2299,6 +2299,7 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_BATCTL is not set
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
+BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ_UTILS=y
 BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
 BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
