Added stack protection

--- a/.config
+++ b/.config
@@ -140,8 +140,8 @@ BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_G is not set
 # BR2_OPTIMIZE_S is not set
 # BR2_GOOGLE_BREAKPAD_ENABLE is not set
-BR2_SSP_NONE=y
-# BR2_SSP_REGULAR is not set
+# BR2_SSP_NONE is not set
+BR2_SSP_REGULAR=y
 
 #
 # Stack Smashing Protection strong needs a toolchain w/ gcc >= 4.9
